# JustDoIt

./: LICENSE  README.md  TODO.md  justdoit.ipynb  pyproject.toml
src/: just.py
